Changed Testing for Matchmaking